--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "main": "src/app.ts",
   "scripts": {
+    "postinstall": "prisma generate --schema prisma/schema.prisma",
+
     "dev": "tsx watch src/app.ts",
     "start": "tsx src/app.ts",
     "prisma:gen": "prisma generate --schema prisma/schema.prisma",
