--- a/package.json
+++ b/package.json
@@ -5,12 +5,12 @@
   "type": "module",
   "main": "src/app.ts",
   "scripts": {
-    "postinstall": "prisma generate --schema prisma/schema.prisma",
+    "postinstall": "prisma generate --schema src/prisma/schema.prisma",
 
     "dev": "tsx watch src/app.ts",
     "start": "tsx src/app.ts",
-    "prisma:gen": "prisma generate --schema prisma/schema.prisma",
-    "prisma:migrate": "prisma migrate dev --schema prisma/schema.prisma",
+    "prisma:gen": "prisma generate --schema src/prisma/schema.prisma",
+    "prisma:migrate": "prisma migrate dev --schema src/prisma/schema.prisma",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
