--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "main": "src/app.ts",
   "scripts": {
     "postinstall": "prisma generate --schema src/prisma/schema.prisma",
-
     "dev": "tsx watch src/app.ts",
     "start": "tsx src/app.ts",
     "prisma:gen": "prisma generate --schema src/prisma/schema.prisma",
@@ -30,6 +29,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.6",
     "prisma": "^6.16.2",
     "typescript": "^5.9.2"
   },
@@ -37,7 +37,9 @@
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.2",
+    "@types/nodemailer": "^7.0.1",
     "nodemon": "^3.1.10",
     "tsx": "^4.20.5"
   }
