--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,9 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "api/index.ts",
-      "use": "@vercel/node",
-      "config": {
-        "includeFiles": ["src/**", "prisma/**", "node_modules/@prisma/client/**"]
-      }
-    }
+    { "src": "api/index.ts", "use": "@vercel/node" }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "api/index.ts"
-    }
+    { "src": "/api/(.*)", "dest": "/api/index.ts" }
   ]
 }
