--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "scripts": {
-    "postinstall": "prisma generate --schema prisma/schema.prisma",
+    "postinstall": "prisma generate",
     "dev": "tsx watch src/app.ts",
-    "build": "prisma generate --schema prisma/schema.prisma",
+    "build": "prisma generate && tsc",
     "start": "node api/index.js",
-    "vercel-start": "node api/index.js"
+    "vercel-build": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
