--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "tsx watch src/app.ts",
     "build": "prisma generate && tsc",
     "start": "node api/index.js",
-    "vercel-build": "prisma generate"
+    "vercel-build": "prisma generate",
+    "netlify-build": "prisma generate && tsc"
   },
   "dependencies": {
+    "@netlify/functions": "^2.0.0",
     "@prisma/client": "^6.16.2",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
