--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "prisma generate && tsc",
     "start": "node api/index.js",
     "vercel-build": "prisma generate",
-    "netlify-build": "prisma generate && tsc"
+    "netlify-build": "prisma generate && tsc && cd netlify/functions && tsc"
   },
   "dependencies": {
     "@netlify/functions": "^2.0.0",
