--- a/package.json
+++ b/package.json
@@ -6,13 +6,10 @@
     "dev": "tsx watch src/app.ts",
     "build": "prisma generate && tsc",
     "start": "node api/index.js",
-    "vercel-build": "prisma generate",
-    "netlify-build": "prisma generate && tsc && cd netlify/functions && tsc"
+    "vercel-build": "prisma generate"
   },
   "dependencies": {
-    "@netlify/functions": "^2.0.0",
     "@prisma/client": "^6.16.2",
-    "@types/node": "^24.5.2",
     "bcrypt": "^6.0.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.2",
@@ -27,6 +24,7 @@
     "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^24.5.2",
     "@types/nodemailer": "^7.0.1",
     "nodemon": "^3.1.10",
     "tsx": "^4.20.5",
