--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,17 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "CommonJS",
-    "moduleResolution": "node",
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
     "outDir": "dist",
-    "allowSyntheticDefaultImports": true,
-    "declaration": true,
-    "declarationMap": true,
-    "sourceMap": true,
-    "typeRoots": ["./node_modules/@types"],
-    "types": []
+    "types": ["node"]
   },
-  "include": ["src", "prisma", "api"],
-  "exclude": ["netlify/functions", "node_modules", "dist"]
+  "include": ["src", "prisma"]
 }
 
 
