--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "postinstall": "prisma generate",
     "dev": "tsx watch src/app.ts",
     "build": "prisma generate && tsc",
-    "start": "node api/index.js",
-    "vercel-build": "prisma generate"
+    "start": "node dist/app.js",
+    "vercel-build": "prisma generate && tsc"
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
