--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "postinstall": "prisma generate",
     "dev": "tsx watch src/app.ts",
