--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "postinstall": "prisma generate",
-    "dev": "tsx watch api/index.ts",
-    "local": "node local-server.js",
+    "dev": "tsx watch src/app.ts",
     "build": "prisma generate && tsc",
     "start": "node dist/app.js",
     "vercel-build": "prisma generate && tsc"
@@ -18,9 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.6",
     "prisma": "^6.16.2",
-    "serverless-http": "^3.2.0",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -29,8 +26,6 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.5.2",
     "@types/nodemailer": "^7.0.1",
-    "@types/swagger-jsdoc": "^6.0.4",
-    "@types/swagger-ui-express": "^4.1.6",
     "nodemon": "^3.1.10",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
