--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "scripts": {
     "postinstall": "prisma generate",
-    "dev": "tsx watch src/app.ts",
+    "dev": "vercel dev",
     "build": "prisma generate && tsc",
-    "start": "node dist/app.js",
-    "vercel-build": "prisma generate && tsc"
+    "start": "vercel dev",
+    "vercel-build": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
