--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,10 +9,9 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "outDir": "dist",
     "types": ["node"]
   },
-  "include": ["src", "api", "prisma"]
+  "include": ["api/**/*", "src/**/*", "prisma/**/*"]
 }
 
 
