--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,14 @@
 {
-  "version": 2
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/**/*.ts",
+      "use": "@vercel/node"
+    }
+  ],
+  "functions": {
+    "api/**/*.ts": {
+      "runtime": "@vercel/node@3"
+    }
+  }
 }
