--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
+    "outDir": "dist",
     "types": ["node"]
   },
   "include": ["api/**/*", "src/**/*", "prisma/**/*"]
