--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "api/index.js",
+  "main": "index.js",
   "scripts": {
     "postinstall": "prisma generate",
     "dev": "vercel dev",
-    "build": "prisma generate && tsc",
-    "start": "vercel dev",
-    "vercel-build": "prisma generate && tsc"
+    "build": "prisma generate",
+    "start": "node index.js",
+    "vercel-build": "prisma generate"
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
